fix: btn to truncate all from groceries

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -51,5 +51,6 @@
 .disabled{
     td{
         text-decoration: line-through;
+        color: lightgray;
     }
 }
